--- a/pixelgram-yt-main/app/globals.css
+++ b/pixelgram-yt-main/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -85,7 +94,7 @@
   }
 
   .postOption {
-    @apply flex items-center justify-center border-b border-zinc-300 dark:border-neutral-700 text-sm font-medium w-full;
+    @apply flex items-center justify-center border-b border-zinc-300 dark:border-neutral-700 text-lg font-medium w-full;
   }
 
   .dialogContent {
